After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 611789 - VoIP toolbar buttons and icons
VoIP toolbar buttons and icons
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
2.29.x
Other Linux
: Normal major
: ---
Assigned To: empathy-maint
Depends on:
Blocks: 629902
 
 
Reported: 2010-03-04 11:25 UTC by Michael Monreal
Modified: 2011-07-12 09:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot (8.15 KB, image/png)
2010-03-04 11:25 UTC, Michael Monreal
Details

Description Michael Monreal 2010-03-04 11:25:14 UTC
Created attachment 155219 [details]
Screenshot

I just tried VoIP over empathy again after some time and was surprised to see a new toolbar. Instead of a "cam off/on" toggle button, Empathy now has 3 (!) buttons with totally unintuitive/missing icons:

Toggle audio transmission - "microphone" icon
---
1 Disable camera and stop sending video -- "grayed out camera" icon
=> icon looks as if button is disabled. Only 24x24 version?
2 Enable camera but don't send video -- "missing" icon (?)
=> no icon set at all? or icon no longer in gnome-icon-theme?
3 Enable camera and send video -- "camera" icon
=> icon fine...

The only added functionality as far as I can see is a "preview" mode, e.g. showing the own cam image but not sending the video?

IMHO the toolbar should be reset to "mic toggle" and "cam toggle" ASAP. Having the video modes as a 3-step radio is not easy to understand, clutters the toolbar and does not even allow to send video and not show a preview (which people may want). Just show the own preview by default and add a new "show own video" toggle to the Video menu.

Bad UI regression from 2.28.x that has to be fixed before 2.30 no matter how late it is.
Comment 1 Guillaume Desmottes 2010-03-04 14:47:57 UTC
The second icon is "stock_person" which is part of gnome-icon-theme.

We switched to this because the camera has really 3 states and we didn't find any better way to represent that than using 3 buttons.

We choosed to not allow the "sending video without preview" case assuming that in most case you want to know what you are sending.
Comment 2 Michael Monreal 2010-03-04 15:06:05 UTC
Ok, first, "stock_person" is no longer shipped with gnome-icon-theme 2.29.x as it no longer includes the deprecated "stock/" context. I am still not sure if GNOME 2.30 will ship with this new icon but this will have to be changed for 2.31.x at least.

[Needless to say, using the "person" metaphor in this case... riiiight....]

>> We switched to this because the camera has really 3 states
Really? I only see two (on/off) which, in the VoIP case means "send video or doen't send video" and this is exactly the same as audio on/off, e.g. "send audio or don't send audio". The preview is not a third state but rather a bonus "tool" which does not even deserve it's own toolbar icon (menu toggle is enough).

Going back to a 2-state video on/off has the incredible advantages:
- allowing the use of a simple and *working* icon metaphor for video that is actually in sync with the audio metaphor
- adding a new feature for free (allowing to have no preview while sending video) - not having to rely on a deprecated and no longer shipped icon
Comment 3 Guillaume Desmottes 2010-03-04 15:55:07 UTC
(In reply to comment #2)
> Ok, first, "stock_person" is no longer shipped with gnome-icon-theme 2.29.x as
> it no longer includes the deprecated "stock/" context. I am still not sure if
> GNOME 2.30 will ship with this new icon but this will have to be changed for
> 2.31.x at least.

I doubt it will, the first release has been done only few days ago and it break a lot of apps.

I agree that the current icon is not great. I'll ask to designers if they can make a new one for 2.32 (a mirror maybe?)
 
> >> We switched to this because the camera has really 3 states
> Really? I only see two (on/off) which, in the VoIP case means "send video or
> doen't send video" and this is exactly the same as audio on/off, e.g. "send
> audio or don't send audio". The preview is not a third state but rather a bonus
> "tool" which does not even deserve it's own toolbar icon (menu toggle is
> enough).

As said, but we did this change because we do *not* want to allow user to send video while preview is off.
Comment 4 Michael Monreal 2010-03-04 16:00:25 UTC
(In reply to comment #3)
> As said, but we did this change because we do *not* want to allow user to send
> video while preview is off.

I do get your point, to some degree... but it really makes things (especially GUI wise) more complicated for no good reason and breaks what *I* consider a valid use case. Cutting features that only 5% of users may use is fine IF it leads to a cleaner GUI which is totally not the case here.
Comment 5 Jakub Steiner 2010-03-04 16:37:41 UTC
I filed the missing stock_person as bug #611818
Comment 6 Jakub Steiner 2010-03-04 16:41:15 UTC
Having said that, I really don't find using this metaphor adequate in this context.
Comment 7 Emilio Pozuelo Monfort 2011-07-06 08:04:31 UTC
With the new Call UI there will only be one tool button to start/stop video (instead of 3 as we have now). Then you can hide/show the preview from the preview itself.
Comment 8 Emilio Pozuelo Monfort 2011-07-12 09:21:19 UTC
This is now fixed for empathy-call (not for empathy-av which will dissapear at some point)

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.