CallWindow: only show one button to control the camera

Having three buttons to control the camera clutters the
UI. Displaying the video preview but not sending video is
not very useful, and we'll add a way of sending video without
displaying the preview by clicking on the preview itself.

https://bugzilla.gnome.org/show_bug.cgi?id=611789